frontend/src/CSS Sheets/InputRows.css
.container {
  display: flex;
  flex-direction: column;
  align-items: center; /* Center the items horizontally */
  justify-content: center; /* Center the items vertically */
  margin: 0 auto; /* Center the container */
  padding: 20px;
}

.row {
  display: flex;
  align-items: center; /* Ensures vertical centering */
  padding-top: 5px;
}

.row input[type="text"],
.row label {
  padding-left: 5px;/* Adjust this to match input and button heights */
  padding-right: 5px;
}

.button-group {
  margin-top: 10px;
}

.clear-all-btn {
  margin-left: 10px;
  padding: 7px 15px;
  background-color: red;
  color: white;
  border: none;
  border-radius: 4px;
  line-height: 1.5; /* Adjust line-height to ensure alignment */
  cursor: pointer;
}

.clear-all-btn:hover {
  background-color: rgb(221, 82, 82);
}

.clear-btn {
  margin-left: 10px;
  margin-top: 5px;
  padding: 4px 15px; /* Padding for buttons */
  border-radius: 4px; /* Rounded corners */
  background-color: red;
  color: white;
  border: none;
  line-height: 1.5; /* Adjust line-height to ensure alignment */
  cursor: pointer;
}

.clear-btn:hover {
  background-color: rgb(221, 82, 82);
}

.submit-btn {
  margin-left: 10px;
  padding: 7px 15px;
  background-color: green;
  color: white;
  border: none;
  border-radius: 3px;
  line-height: 1.5; /* Adjust line-height to ensure alignment */
  cursor: pointer;
}

.submit-btn:hover {
  background-color: rgb(60, 173, 60);
}

.download-template-btn {
  margin-bottom: 10px;
  padding: 10px 15px; /* Padding for buttons */
  border-radius: 4px; 
  background-color: rgb(14, 14, 131);
  color: white;
  border: none;
  border-radius: 3px;
  line-height: 1.5; /* Adjust line-height to ensure alignment */
  cursor: pointer;
}

.download-template-btn:hover {
  background-color: rgb(41, 41, 95);
}

.bulk-upload-btn {
  margin-left: 10px;
  padding: 7px 15px;
  background-color: rgb(14, 14, 131);
  color: white;
  border: none;
  border-radius: 4px;
  line-height: 1.5; /* Adjust line-height to ensure alignment */
  cursor: pointer;
}

.bulk-upload-btn:hover {
  background-color: rgb(41, 41, 95);
}

.upload-btn {
  margin-left: 10px;
  padding: 7px 15px;
  background-color: rgb(14, 131, 34);
  color: white;
  border: none;
  border-radius: 3px;
  line-height: 1.5; /* Adjust line-height to ensure alignment */
  cursor: pointer;
}

.upload-btn:hover {
  background-color: rgb(41, 95, 41);
}

.img-upload-container {
  display: flex;
  align-items: center;
  margin: 5px 5px 0px 5px;
  padding-top: 1px;
  background-color: #333;
  border-radius: 4px;
  /* margin-top: 5px; */
  /* line-height: 1.5; */
}

.img-upload-container:hover {
  background-color: rgb(41, 41, 95);
}

.uploaded-image-container {
  margin: 0px 5px 10px 5px;
  background-color: rgb(14, 14, 131);
  border-radius: 4px;
}

.uploaded-image-container:hover {
  background-color: rgb(41, 41, 95);
}

.img-upload-button {
  margin: 0px;
  border-radius: 4px; /* Rounded corners */
  background-color: #333;
  color: white;
  border: none;
  /* line-height: 1.5; */
  cursor: pointer;
  transition: background-color 0.3s; /* Transition effect */
}

.img-upload-button:hover {
  background-color: rgb(41, 41, 95);
}

.upload-icon {
  width: 20px;
  height: 20px;
  margin: 5px 1px 0px 1px;
}

.invalid-marker {
  color: red;
  font-size: large;
  font-weight: bold;
}


.invalid-label label {
  background-color: #e2747d;
  border-color: #eb6e7a;
  border-radius: 4px;
  color: black; 
}

input[type="number"] {
  width: 40px; /* Adjust width as necessary */
}

.loading-bar {
  width: 70%;
  background-color: gray;
  height: 20px;
  border-radius: 5px;
  position: relative;
  margin-top: 20px;
}

.loading-progress {
  height: 20px;
  background-color: #76c7c0;
  border-radius: 5px;
  transition: width 0.1s ease-in-out;
}

